# rust-sample

./: Cargo.toml  README.md
src/: main.rs  utils.rs
src/models/: user.rs
