[package]
name = "rust-sample"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
ulid = { version = "1.1.3", features = ["serde"] }
validator = { version = "0.18.1", features = ["derive"] }
thiserror = { version = "1.0.63" }
